Added  video player and some sample video files

--- a/WindowsVideoPlayer/VideoPlayer/App.config
+++ b/WindowsVideoPlayer/VideoPlayer/App.config
@@ -1,6 +1,58 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="VideoPlayer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <applicationSettings>
+    <VideoPlayer.Properties.Settings>
+      <setting name="ScreensConfiguration" serializeAs="Xml">
+        <value>
+          <ScreensConfiguration>
+            <ShowControls>true</ShowControls>
+            <MainWindowTop>10</MainWindowTop>
+            <MainWindowLeft>10</MainWindowLeft>
+            <MainWindowWidth>600</MainWindowWidth>
+            <MainWindowHeight>401</MainWindowHeight>
+            <Screens>
+
+              <ScreenConfiguration>
+                <PlaySound>true</PlaySound>
+                <Top>0</Top>
+                <Left>0</Left>
+                <Width>300</Width>
+                <Height>200</Height>
+                <ID>window1</ID>
+                <VideoFilePath>C:\repos\windows-video-player\SampleVideos\video1.wmv</VideoFilePath>
+              </ScreenConfiguration>
+
+              <ScreenConfiguration>
+                <PlaySound>false</PlaySound>
+                <Top>0</Top>
+                <Left>301</Left>
+                <Width>300</Width>
+                <Height>200</Height>
+                <ID>window2</ID>
+                <VideoFilePath>C:\repos\windows-video-player\SampleVideos\video2.wmv</VideoFilePath>
+              </ScreenConfiguration>
+
+              <ScreenConfiguration>
+                <PlaySound>true</PlaySound>
+                <Top>201</Top>
+                <Left>100</Left>
+                <Width>400</Width>
+                <Height>200</Height>
+                <ID>window2</ID>
+                <VideoFilePath>C:\repos\windows-video-player\SampleVideos\video3.wmv</VideoFilePath>
+              </ScreenConfiguration>
+            </Screens>
+          </ScreensConfiguration>
+        </value>
+      </setting>
+    </VideoPlayer.Properties.Settings>
+  </applicationSettings>
 </configuration>
