1. Added simple video library 2. Changed background color to black

--- a/WindowsVideoPlayer/VideoPlayer/App.config
+++ b/WindowsVideoPlayer/VideoPlayer/App.config
@@ -18,6 +18,24 @@
             <MainWindowLeft>10</MainWindowLeft>
             <MainWindowWidth>600</MainWindowWidth>
             <MainWindowHeight>401</MainWindowHeight>
+            <VideoLibraryItems>
+              <VideoLibraryItem>
+                <Name>videoOne</Name>
+                <FullFilePath>C:\repos\windows-video-player\SampleVideos\video1.wmv</FullFilePath>
+              </VideoLibraryItem>
+              <VideoLibraryItem>
+                <Name>videoTwo</Name>
+                <FullFilePath>C:\repos\windows-video-player\SampleVideos\video2.wmv</FullFilePath>
+              </VideoLibraryItem>
+              <VideoLibraryItem>
+                <Name>videoThree</Name>
+                <FullFilePath>C:\repos\windows-video-player\SampleVideos\video3.wmv</FullFilePath>
+              </VideoLibraryItem>
+              <VideoLibraryItem>
+                <Name>videoFour</Name>
+                <FullFilePath>C:\repos\windows-video-player\SampleVideos\video4.wmv</FullFilePath>
+              </VideoLibraryItem>
+            </VideoLibraryItems>
             <Screens>
 
               <ScreenConfiguration>
@@ -27,7 +45,7 @@
                 <Width>300</Width>
                 <Height>200</Height>
                 <ID>window1</ID>
-                <VideoFilePath>C:\repos\windows-video-player\SampleVideos\video1.wmv</VideoFilePath>
+                <LibraryItemName>videoOne</LibraryItemName>
               </ScreenConfiguration>
 
               <ScreenConfiguration>
@@ -37,7 +55,7 @@
                 <Width>300</Width>
                 <Height>200</Height>
                 <ID>window2</ID>
-                <VideoFilePath>C:\repos\windows-video-player\SampleVideos\video2.wmv</VideoFilePath>
+                <LibraryItemName>videoTwo</LibraryItemName>
               </ScreenConfiguration>
 
               <ScreenConfiguration>
@@ -47,7 +65,7 @@
                 <Width>400</Width>
                 <Height>200</Height>
                 <ID>window2</ID>
-                <VideoFilePath>C:\repos\windows-video-player\SampleVideos\video3.wmv</VideoFilePath>
+                <LibraryItemName>videoThree</LibraryItemName>
               </ScreenConfiguration>
             </Screens>
           </ScreensConfiguration>
